--- a/project_1/css/style.css
+++ b/project_1/css/style.css
@@ -74,7 +74,7 @@ body {
 .header-content__img {
     background-color: #fff;
     display: block;
-    color: ##fff;
+    color: #fff;
     text-indent: 100%;
     overflow: hidden;
 }
