--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -316,10 +316,9 @@ body {
 .header {
   background-image: url(../img/bg_header.jpg);
   background-repeat: no-repeat;
-  padding: 40px 0;
+  padding: 50px 0;
   margin: 0 auto;
-  height: 100%;
-  background-size: cover; }
+  height: 100%; }
   .header-header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -354,7 +353,7 @@ body {
       .header-menu__menu-link:active {
         color: #ffffff; }
   .header-slider {
-    margin: 285px 150px 325px 150px;
+    margin: 278px 150px 325px 150px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -375,7 +374,7 @@ body {
       .header-slider-content__title {
         font-size: 52px;
         font-weight: 800;
-        margin: 14px 0 15px 0; }
+        margin: 9px 0 10px 0; }
       .header-slider-content__text {
         font-size: 16px;
         font-weight: 300;
@@ -383,11 +382,11 @@ body {
         max-width: 537px;
         margin: 0 auto; }
       .header-slider-content__btn {
-        margin: 52px 0 0 0;
+        margin: 50px 0 0 0;
         display: inline-block;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box;
-        padding: 21px 39px;
+        padding: 15px 39px;
         border-radius: 3px;
         -webkit-box-shadow: inset 0px -3px 0 0 #736357;
                 box-shadow: inset 0px -3px 0 0 #736357;
