--- a/project_2/scss/fonts.scss
+++ b/project_2/scss/fonts.scss
@@ -169,7 +169,7 @@
 }
 
 @font-face {
-    font-family: 'ralewaysemibold';
+    font-family: 'raleway';
     src: url('../fonts/raleway/raleway-semibold.eot');
     src: url('../fonts/raleway/raleway-semibold.eot?#iefix') format('embedded-opentype'),
          url('../fonts/raleway/raleway-semibold.woff2') format('woff2'),
